<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_app">Opens the app</string>
    <string name="text_my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="text_popular_movies">POPULAR MOVIES</string>
    <string name="text_scores_app">SCORES APP</string>
    <string name="text_library_app">LIBRARY APP</string>
    <string name="text_build_it_bigger">BUILD IT BIGGER</string>
    <string name="text_xyz_reader">XYZ READER</string>
    <string name="text_capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_pop_movies">Pop Movies</string>
    <string name="title_activity_detail_movie">MovieDetail</string>
    <string name="movies_state_key">movies_state_key</string>
</resources>